[gd_scene load_steps=11 format=2]

[ext_resource path="res://Images/Enemies/Enemy_1.png" type="Texture" id=1]
[ext_resource path="res://Images/Enemies/Enemy_1_lights.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemies/Enemy_2.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Enemies/EnemyHitSound.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemies/EnemyDeathSound.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.468
height = 48.4806

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Torso:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Torso:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -27.3552, -43.4567 ), Vector2( -27.3552, -47.4567 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Foot2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -30.1253, 39.994 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Foot2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Heart:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.519409, -9.17612 ), Vector2( 0.519409, -13.1761 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Heart:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Foot:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.21194, 50.2089 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Foot:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "stomp"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1.4, 1.8, 2, 2.2, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -27, -23 ), Vector2( -17, -53 ), Vector2( -17, -53 ), Vector2( -30, -20 ), Vector2( -30, -20 ), Vector2( -17, -53 ), Vector2( -17, -53 ), Vector2( -30, -20 ), Vector2( -30, -20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1.4, 1.8, 2, 2.2, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -15.0, 25.0, 35.0, -15.0, -15.0, 25.0, 35.0, -15.0, -15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1.4, 1.8, 2, 2.2, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ), Vector2( 0, -1 ), Vector2( 0, 0 ), Vector2( -3, 16 ), Vector2( -3, 16 ), Vector2( 0, -1 ), Vector2( 0, 0 ), Vector2( -3, 16 ), Vector2( -3, 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Torso:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1.4, 1.8, 2, 2.2, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -5.0, 10.0, 5.0, -5.0, -5.0, 10.0, 5.0, -5.0, -5.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Heart:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.9, 1.1, 1.4, 1.9, 2, 2.3, 2.5, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 7 ), Vector2( 2, -7 ), Vector2( 2, -9 ), Vector2( -4, 9 ), Vector2( -3, 7 ), Vector2( -3, 7 ), Vector2( 2, -7 ), Vector2( 2, -9 ), Vector2( -4, 9 ), Vector2( -3, 7 ), Vector2( -3, 7 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Heart:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.9, 1.1, 1.4, 1.9, 2, 2.3, 2.5, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Foot:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.7, 0.8, 1.4, 1.8, 2, 2.1, 2.2, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.21194, 50.2089 ), Vector2( 1.21194, 50.2089 ), Vector2( 1.21194, 50.2089 ), Vector2( 1.21194, 50.2089 ), Vector2( 9.21194, 50.2089 ), Vector2( 9.21194, 50.2089 ), Vector2( 1.21194, 50.2089 ), Vector2( 1.21194, 50.2089 ), Vector2( 1.21194, 50.2089 ), Vector2( 9.21194, 50.2089 ), Vector2( 9.21194, 50.2089 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Foot:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.7, 0.8, 1.4, 1.8, 2, 2.1, 2.2, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Foot2:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.7, 0.8, 1.1, 1.4, 1.8, 2, 2.1, 2.2, 2.5, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -30, 40 ), Vector2( -47.5, 10 ), Vector2( -47.5, 10 ), Vector2( -46, 40 ), Vector2( -46, 40 ), Vector2( -46, 40 ), Vector2( -30, 40 ), Vector2( -47.5, 10 ), Vector2( -47.5, 10 ), Vector2( -46, 40 ), Vector2( -46, 40 ), Vector2( -46, 40 ), Vector2( -30, 40 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Foot2:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.7, 0.8, 1.1, 1.4, 1.8, 2, 2.1, 2.2, 2.5, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 40.0, 40.0, 30.0, 0.0, 0.0, 0.0, 40.0, 40.0, 30.0, 0.0, 0.0, 0.0 ]
}
tracks/10/type = "method"
tracks/10/path = NodePath("..")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.8, 1.4, 2.2, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ false ],
"method": "_on_stomp"
}, {
"args": [  ],
"method": "flip_direction"
}, {
"args": [ false ],
"method": "_on_stomp"
}, {
"args": [ true ],
"method": "_on_stomp"
} ]
}
tracks/11/type = "method"
tracks/11/path = NodePath(".")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Heart:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.3, 0.5, 0.75, 0.8, 1, 1.25, 1.3, 1.5, 1.75, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -6 ), Vector2( -4, -5 ), Vector2( -5, -3 ), Vector2( -1, -6 ), Vector2( 5.5, -12.5 ), Vector2( 6, -13 ), Vector2( -1, -6 ), Vector2( -4, -5 ), Vector2( -5, -3 ), Vector2( -1, -6 ), Vector2( 5.5, -12.5 ), Vector2( 6, -13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Heart:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.3, 0.5, 0.75, 1, 1.25, 1.3, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 5 ), Vector2( 0, 0 ), Vector2( 8, -8 ), Vector2( 0, 0 ), Vector2( -2, 5 ), Vector2( 0, 0 ), Vector2( 8, -8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Torso:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -15.0, -15.0, -15.0, -15.0, -15.0, -15.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Foot2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -38, 40 ), Vector2( -30, 48 ), Vector2( -7, 48 ), Vector2( 17, 48 ), Vector2( 12, 46 ), Vector2( 28, 44 ), Vector2( 7, 46 ), Vector2( -17, 38 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Foot2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 30.0, 0.0, 10.0, -30.0, -40.0, -80.0, -40.0, -30.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Foot:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 47 ), Vector2( 28, 47 ), Vector2( 7, 46 ), Vector2( -17, 38 ), Vector2( -38, 43 ), Vector2( -30, 48 ), Vector2( -7, 48 ), Vector2( 17, 48 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Foot:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -40.0, -80.0, -40.0, -30.0, 30.0, 10.0, 0.0, -30.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Head:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -27, -43 ), Vector2( -35, -35 ), Vector2( -27, -43 ), Vector2( -19, -51 ), Vector2( -27, -43 ), Vector2( -35, -35 ), Vector2( -27, -43 ), Vector2( -19, -51 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Head:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 43.0
height = 55.0

[node name="Enemy_1" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 3 )
Max_vel = 200
Acceleration = 20
health = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -17.3134, -8.65672 )
shape = SubResource( 1 )
disabled = true

[node name="AnimatedSkeleton" type="Node2D" parent="."]

[node name="Foot" type="Sprite" parent="AnimatedSkeleton"]
position = Vector2( -35.6868, 44.4457 )
rotation = 0.422668
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 92, 31, 20 )

[node name="Foot_lights" type="Sprite" parent="AnimatedSkeleton/Foot"]
modulate = Color( 1.6, 1.5, 1.6, 1 )
rotation = 1.49012e-08
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2, 92, 31, 20 )

[node name="Foot2" type="Sprite" parent="AnimatedSkeleton"]
position = Vector2( 16.6263, 45.4217 )
rotation = -0.899992
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 92, 31, 20 )

[node name="Foot_lights" type="Sprite" parent="AnimatedSkeleton/Foot2"]
modulate = Color( 1.6, 1.5, 1.6, 1 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2, 92, 31, 20 )

[node name="Torso" type="Sprite" parent="AnimatedSkeleton"]
position = Vector2( -0.578288, 1.44572 )
rotation = -0.261799
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 54, 59, 41, 66 )

[node name="Heart" type="Sprite" parent="AnimatedSkeleton"]
modulate = Color( 1.5, 1.4, 1.5, 1 )
position = Vector2( -1.86743, -5.71086 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 58.001, 15, 25 )

[node name="Head" type="Sprite" parent="AnimatedSkeleton"]
position = Vector2( -29.3132, -40.6868 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, -1, 72, 61 )
region_filter_clip = true

[node name="Head_lights" type="Sprite" parent="AnimatedSkeleton/Head"]
modulate = Color( 1.5, 1.4, 1.5, 1 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, -1, 72, 61 )
region_filter_clip = true

[node name="SpawnPosition" type="Position2D" parent="AnimatedSkeleton"]
position = Vector2( -100, 45 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSkeleton"]
playback_speed = 1.5
anims/idle = SubResource( 2 )
anims/stomp = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
modulate = Color( 1, 1, 0, 0.454902 )
position = Vector2( -18, -21 )
rotation = -0.261799
shape = SubResource( 5 )

[node name="AttackTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0
one_shot = true

[node name="HitSound" parent="." instance=ExtResource( 4 )]

[node name="DeathSound" parent="." instance=ExtResource( 5 )]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
